--- a/dev/_header.scss
+++ b/dev/_header.scss
@@ -1,5 +1,6 @@
 header{
     padding-top: 0;
+    transition: margin-top 300ms;
 
     .hero-image{
         margin-bottom: 20px;
